Update gitignore; Add documentation; Fix misunderstanding

--- a/notebooks/calculus_example.ipynb
+++ b/notebooks/calculus_example.ipynb
@@ -214,16 +214,17 @@
    "source": [
     "#### II.2.2 Integral or Antiderivative?\n",
     "\n",
-    "This has thrown me a bit for a loop, but playing fast-and-loose the antiderivative can be thought of as the implicit integral. A few more words on this can be a bit of words about why there are different concepts for **implicit** and **explicit** integration. \n",
+    "This has thrown me a bit for a loop, but playing fast-and-loose the antiderivative can be thought of as the implicit integral.\n",
     "\n",
-    "- implicit integration: $\\int f'(x) dx = f(x)$ \n",
-    "- explicit integration: $\\int f'(x) dx = f(x) + C$ \n",
-    "\n",
-    "#### $R \\rightarrow R$\n",
-    "\n",
-    "Let's define $f(x) = x^2 + 4$, therefore $f'(x) = 2x$. Then $\\int f'(x) = x^2$ which doesn't $f(x)$ !!\n",
-    "\n",
-    "#### $R^N \\rightarrow R$\n",
+    "- implicit integration: $\\int f'(x) dx = f(x) + C$ \n",
+    "- explicit integration: $\\int_a^b f'(x) dx = f(x) + C$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### II.2.3 How to integrate the gradient\n",
     "\n",
     "Let's define $f(x, y) = x^2 + 2xy + y^2$, therefore $\\nabla f(x, y) = [2x + 2y, 2x + 2y]$. Let's attempt to derive $f(x, y)$ from $f'(x, y)$.\n",
     "\n",
@@ -252,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### II.2.3 Notice how the shape of the output doesn't change as we increase the number of integrations taken"
+    "#### II.2.4 Notice how the shape of the output doesn't change as we increase the number of integrations taken"
    ]
   },
   {
@@ -282,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### II.2.4 Computational integration\n",
+    "#### II.2.5 Computational integration\n",
     "\n",
     "It's all about Reimann sums for now until we get smarter.\n",
     "\n",
