--- a/notebooks/calculus_example.ipynb
+++ b/notebooks/calculus_example.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "func = lambda x, y: (x ** 2) + (y ** 2)\n",
-    "f = Function(function_def=func, num_inputs=2, output_dims=None)  # a function from R^N -> R is scalar-valued so its output has not dimensionality"
+    "f = Function(function_def=func, num_inputs=2, output_dims=None)  # a function from R^N -> R is scalar-valued so its output has no dimensionality"
    ]
   },
   {
@@ -131,11 +131,11 @@
     "\n",
     "$$ f(x_{0:N}): R^N \\rightarrow R$$\n",
     "\n",
-    "\\begin{align}\n",
-    "f_{xi}(x_{0:N}) &= \\frac{f(x_0, \\cdots, x_i + \\epsilon, \\cdots, x_N)) - f(x_0, \\cdots, x_N)}{\\epsilon} && \\text{jitter right} \\\\\n",
-    "&= \\frac{f(x_0, \\cdots, x_N) - f(x_0, \\cdots, x_i - \\epsilon, \\cdots, x_N))}{\\epsilon} && \\text{jitter left} \\\\\n",
+    "\\begin{align*}\n",
+    "f_{xi}(x_{0:N}) &= \\frac{f(x_0, \\cdots, x_i + \\epsilon, \\cdots, x_N) - f(x_0, \\cdots, x_N)}{\\epsilon} && \\text{jitter right} \\\\\n",
+    "&= \\frac{f(x_0, \\cdots, x_N) - f(x_0, \\cdots, x_i - \\epsilon, \\cdots, x_N)}{\\epsilon} && \\text{jitter left} \\\\\n",
     "&= \\frac{f(x_0, \\cdots, x_i - \\epsilon, \\cdots, x_N)) - f(x_0, \\cdots, x_i + \\epsilon, \\cdots, x_N)}{2\\epsilon} && \\text{jitter both left and right} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "The definition of `differentiable` is garnered from the first two methods. If $f_{xi}(x_{0:N})$ from the right and from the left are approximately equal at point $P$ then we consider it differentiable at point $P$. \n",
     "\n",
@@ -291,7 +291,7 @@
     "$$\\iint_a^b f(x, y) = \\lim_{\\Delta x,y \\rightarrow 0} \\sum_{i=a}^b\\sum_{j=a}^b f(i, j) * \\Delta x * \\Delta y$$\n",
     "$$\\cdots$$\n",
     "\n",
-    "This get **really** slow even integrating functions from $R^2 \\rightarrow R$ and so we have developed smarter tools for approximating integrals like MCMC.\n",
+    "This gets **really** slow even integrating functions from $R^2 \\rightarrow R$ and so we have developed smarter tools for approximating integrals like MCMC.\n",
     "\n",
     "So, this library is not good at integrating functions larger than $R \\rightarrow R$, but it does implement integrating the gradient of functions from $R^N \\rightarrow R$ which is cool and not slow :)"
    ]
