--- a/notebooks/calculus_example.ipynb
+++ b/notebooks/calculus_example.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "From the **gradient theorem**, or the fundamental theorem of calculus for line integrals, we obtain the tidbit that line integrals are path independent throught gradient fields! This means that \n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "f(x, y) &= \\int \\frac{df}{dx} dx = \\int \\frac{df}{dy} && \\text{let's choose the integral of df/dx just because}  \\\\\n",
     "f(x, y) &= x^2 + 2xy + C(y) && \\text{where C(y) is some constant function of y} \\\\\n",
     "C(y) &= f(x, y) - x^2 - 2xy && \\text{isolate C(y)} \\\\\n",
@@ -240,7 +240,7 @@
     "\\int C'(y) dy &= \\int 2y dy && \\text{integrate with respect to y to get back to C(y)} \\\\\n",
     "C(y) &= y^2 + C && \\text{nice} \\\\\n",
     "f(x, y) &=x^2 + 2xy + y^2 + C && \\text{plug C(y) back in and we got it!} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "So that's how we can integrate the gradient to get back to the original function.\n",
     "\n",
